# genai-tools

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.github/: copilot-instructions.md
notes/: vibevoice_on_colab.md
tools/notebookreport/: README.md
tools/vibevoice/: README.md
tools/vibevoice/nbs/: vibevoice_create.ipynb
tools/weekly-news-brief/: README.md  run_fetch_and_filter.py  test_claude_api.py  validate_podcasts.py
tools/weekly-news-brief/config/: podcasts.json
tools/weekly-news-brief/src/: __init__.py  fetch_feeds.py  filter_episodes.py  rss_utils.py
tools/xg_grapher/: README.md  app.py  data_manager.py  plotting.py  processing.py  pyproject.toml  xg_data.db
tools/xg_grapher/xg_grapher/: app.py  data_manager.py  processing.py
