[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xg_grapher"
version = "0.1.0"
dependencies = [
    "streamlit",
    "pandas",
    "soccerdata",
    "lxml",
    "html5lib",
    "sqlalchemy",
    "altair",
    "numpy"
]

[project.scripts]
xg_grapher = "xg_grapher.app:main"